# jaya-currency-conversor

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: linting.yml  setup-python-poetry.yml  tests.yml
Jaypay Currency API/: Request Conversion.bru  User's conversions.bru  bruno.json
currency_converter/: .coveragerc  Makefile  manage.py
currency_converter/.github/workflows/: linting.yml  tests.yml
currency_converter/conversion/: api.py  apps.py  conftest.py  domain.py  exceptions.py  models.py  services.py  test_api.py  test_services.py  tests.py  urls.py
currency_converter/conversion/migrations/: 0001_initial.py  0002_rename_user_id_conversion_user.py  0003_alter_conversion_rates_timestamp.py  0004_conversion_created_at.py  0005_alter_conversion_created_at.py
currency_converter/currency_converter/: asgi.py  settings.py  urls.py  wsgi.py
currency_converter/users/: admin.py  models.py  tests.py
currency_converter/users/migrations/: 0001_initial.py
