[tool.poetry]
name = "jaya"
version = "0.1.0"
description = ""
authors = ["matheuscas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
Django = "^5.0.6"
django-environ = "^0.11.2"
pytz = "^2024.1"
django-stubs = "^5.0.2"
shortuuid = "^1.0.13"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.27.2"
django-structlog = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
ruff = "^0.4.6"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
freezegun = "^1.5.1"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
exclude = ["*.pyi"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "currency_converter.settings"
# -- recommended but optional:
python_files = ["tests.py", "test_*.py", "*_tests.py"]
